--- a/.github/workflows/service.yml
+++ b/.github/workflows/service.yml
@@ -1,17 +1,17 @@
 on: push
 name: deploy
 jobs:
-  deploy:
-    name: deploy to cluster
-    runs_on: ubuntu-latest
+  build-and-push:
+    name: build and push image
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: build and push to docker
-      uses: docker/build-push-action@v1
+    - uses: actions/checkout@master
+    - name: build and push to docker
+      uses: docker/build-push-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: ${{ secrets.repository }}
+        repository: ${{ github.repository }}
         tag_with_ref: true
-        tag_whit_sha: true
-        tags: ${{ secrets.sha }}
+        tag_with_sha: true
+        tags: ${{ github.sha }}
