--- a/.github/workflows/service.yml
+++ b/.github/workflows/service.yml
@@ -1,17 +1,27 @@
-on: push
-name: deploy
+on: ci
+
+ci:
+  push:
+    branches:
+      - 'mian'
+
 jobs:
-  build-and-push:
-    name: build and push image
+  docker:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: build and push to docker
-      uses: docker/build-push-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: ${{ github.repository }}
-        tag_with_ref: true
-        tag_with_sha: true
-        tags: ${{ github.sha }}
+      -
+        name: Set up QEMU
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: ${{ github.repository }}
+      -
+        name: Build image and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: ${{ github.sha }}
