--- a/.github/workflows/service.yml
+++ b/.github/workflows/service.yml
@@ -1,21 +1,27 @@
-on: push
+name: Application Workflow
+
+on:
+  push:
+    branches: main
 
 jobs:
-  docker:
+  docker-job:
     runs-on: ubuntu-latest
     steps:
       -
         name: Set up QEMU
         uses: docker/setup-buildx-action@v2
       -
-        name: Login to DockerHub
+        name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_TOKEN }}
       -
         name: Build image and push
         uses: docker/build-push-action@v3
         with:
           push: true
           tags: ${{ github.sha }}
+          tag_with_ref: true
+          tag_with_sha: true
