--- a/.github/workflows/service.yml
+++ b/.github/workflows/service.yml
@@ -13,10 +13,11 @@ jobs:
         uses: docker/setup-buildx-action@v2
       -
         name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
+          logout: true
       -
         name: Build image and push
         uses: docker/build-push-action@v3
