--- a/.github/workflows/service.yml
+++ b/.github/workflows/service.yml
@@ -9,20 +9,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
-        name: Set up QEMU
-        uses: docker/setup-buildx-action@v2
+        name: Checkout
+        uses: actions/checkout@v2
       -
         name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-          logout: true
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       -
         name: Build image and push
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v2
         with:
+          context: .
+          file: ./Dockerfile
           push: true
-          tags: ${{ github.sha }}
-          tag_with_ref: true
-          tag_with_sha: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewave:latest
